corrected style of header dashboard for better alignment of counters

--- a/src/styles/sass/sasscomponents/_counter.scss
+++ b/src/styles/sass/sasscomponents/_counter.scss
@@ -2,12 +2,14 @@
   &-box {
     width: 5rem;
     height: 5rem;
-    margin: 0;
-    @include mobile {
-      margin: 1rem;
-    }
+  }
+
+  &-label {
+    margin-bottom: 1rem;
+    font-size: small;
+
     @include tablet {
-      margin: 2rem;
+      margin-bottom: 0;
     }
   }
 
